add lecture materials

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -35,6 +35,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/cond-prob-2-sol.pdf">Solutions</a>)
   <li><a href="lecture/randvar.pdf">Sep 22 - Random Variables</a>
     (<a href="lecture/randvar-sol.pdf">Solutions</a>)
+  <li><a href="lecture/counts-1.pdf">Sep 27 - Models for Counts 1</a>
+    (<a href="lecture/counts-1-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -46,6 +48,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/39090894fa1949f48e550dc7309041d91d">Sep 15</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/10e54f71d7ed46d08fa1f5624c2f00d01d">Sep 20</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/ef969ba263dc4fd89c770dfaab97e98c1d">Sep 22</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/4322152153c547d9a1bda62197456a361d">Sep 27</a>
 </ul>
 
 
