--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -37,6 +37,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/randvar-sol.pdf">Solutions</a>)
   <li><a href="lecture/counts-1.pdf">Sep 27 - Models for Counts 1</a>
     (<a href="lecture/counts-1-sol.pdf">Solutions</a>)
+  <li><a href="lecture/counting.pdf">Sep 29 - Counting</a>
+    (<a href="lecture/counting-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -49,6 +51,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/10e54f71d7ed46d08fa1f5624c2f00d01d">Sep 20</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/ef969ba263dc4fd89c770dfaab97e98c1d">Sep 22</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/4322152153c547d9a1bda62197456a361d">Sep 27</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/6cc137177bf44f8e981289000191cef21d">Sep 29</a>
 </ul>
 
 
@@ -66,9 +69,8 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="hw/hw02.pdf">Homework 2</a> (Due Sep 22)
   <li><a href="hw/hw03.pdf">Homework 3</a> (Due Sep 29)
+  <li><a href="hw/hw04.pdf">Homework 4</a> (Due Oct 6)
 <!--
-  <li><a href="hw/hw04.pdf">Homework 4</a>
-    (<a href="hw/hw04sol.pdf">Solutions</a>)
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
