--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -39,6 +39,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/counts-1-sol.pdf">Solutions</a>)
   <li><a href="lecture/counting.pdf">Sep 29 - Counting</a>
     (<a href="lecture/counting-sol.pdf">Solutions</a>)
+  <li><a href="lecture/normal.pdf">Oct 6 - The Normal Model</a>
+    (<a href="lecture/normal-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -52,6 +54,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/ef969ba263dc4fd89c770dfaab97e98c1d">Sep 22</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/4322152153c547d9a1bda62197456a361d">Sep 27</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/6cc137177bf44f8e981289000191cef21d">Sep 29</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a1e64baf16fc4403928789b2e090d5b31d">Oct 6</a>
 </ul>
 
 
@@ -70,9 +73,9 @@ stylesheet: /css/main.css?v=1
   <li><a href="hw/hw02.pdf">Homework 2</a> (Due Sep 22)
   <li><a href="hw/hw03.pdf">Homework 3</a> (Due Sep 29)
   <li><a href="hw/hw04.pdf">Homework 4</a> (Due Oct 6)
-<!--
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
+<!--
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
   <li><a href="handout/t-percentile.pdf">T-Table: Percentiles of Student's t distribution</a>
   <li><a href="hw/hw05.pdf">Homework 5</a>
