update cor1305 materials

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -41,6 +41,12 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/counting-sol.pdf">Solutions</a>)
   <li><a href="lecture/normal.pdf">Oct 6 - The Normal Model</a>
     (<a href="lecture/normal-sol.pdf">Solutions</a>)
+  <li><a href="lecture/normal-2.pdf">Oct 11 - The Normal Model 2</a>
+    (<a href="lecture/normal-2-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/CEOPAY.CSV">CEOPAY.CSV</a>
+      <li><a href="http://onlinestatbook.com/stat_sim/sampling_dist/">Central Limit Theorem Demo</a>
+    </ul>
 </ul>
 
 
@@ -55,6 +61,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/4322152153c547d9a1bda62197456a361d">Sep 27</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/6cc137177bf44f8e981289000191cef21d">Sep 29</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a1e64baf16fc4403928789b2e090d5b31d">Oct 6</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/75e13183b83647a0b128199ebb5d86091d">Oct 11</a>
 </ul>
 
 
