add new lecture materials

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -47,6 +47,8 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/CEOPAY.CSV">CEOPAY.CSV</a>
       <li><a href="http://onlinestatbook.com/stat_sim/sampling_dist/">Central Limit Theorem Demo</a>
     </ul>
+  <li><a href="lecture/clt.pdf">Oct 13 - The Central Limit Theorem</a>
+    (<a href="lecture/clt-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -62,6 +64,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/6cc137177bf44f8e981289000191cef21d">Sep 29</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a1e64baf16fc4403928789b2e090d5b31d">Oct 6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/75e13183b83647a0b128199ebb5d86091d">Oct 11</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/5544147b138a4ba9abd61c3eca541a451d">Oct 13</a>
 </ul>
 
 
@@ -82,6 +85,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="hw/hw04.pdf">Homework 4</a> (Due Oct 6)
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
+  <li><a href="hw/hw05.pdf">Homework 5</a> (Due Oct 20)
 <!--
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
   <li><a href="handout/t-percentile.pdf">T-Table: Percentiles of Student's t distribution</a>
