--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -49,6 +49,8 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="lecture/clt.pdf">Oct 13 - The Central Limit Theorem</a>
     (<a href="lecture/clt-sol.pdf">Solutions</a>)
+  <li><a href="lecture/confint-mean.pdf">Oct 18 - Confidence Interval for Population Mean</a>
+    (<a href="lecture/confint-mean-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -65,6 +67,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a1e64baf16fc4403928789b2e090d5b31d">Oct 6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/75e13183b83647a0b128199ebb5d86091d">Oct 11</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/5544147b138a4ba9abd61c3eca541a451d">Oct 13</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/83d89acd80cf4c6daa09392a2c31ff261d">Oct 18</a>
 </ul>
 
 
@@ -86,9 +89,9 @@ stylesheet: /css/main.css?v=1
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
   <li><a href="hw/hw05.pdf">Homework 5</a> (Due Oct 20)
-<!--
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
   <li><a href="handout/t-percentile.pdf">T-Table: Percentiles of Student's t distribution</a>
+<!--
   <li><a href="hw/hw05.pdf">Homework 5</a>
     (<a href="hw/hw05sol.pdf">Solutions</a>)
     <ul>
