--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -51,6 +51,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/clt-sol.pdf">Solutions</a>)
   <li><a href="lecture/confint-mean.pdf">Oct 18 - Confidence Interval for Population Mean</a>
     (<a href="lecture/confint-mean-sol.pdf">Solutions</a>)
+  <li><a href="lecture/confint-prop.pdf">Oct 20 - Confidence Interval for Population Proportion</a>
+    (<a href="lecture/confint-prop-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -68,6 +70,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/75e13183b83647a0b128199ebb5d86091d">Oct 11</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/5544147b138a4ba9abd61c3eca541a451d">Oct 13</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/83d89acd80cf4c6daa09392a2c31ff261d">Oct 18</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/ff24dccfa46d4a2d94dfa2f648ecd5641d">Oct 20</a>
 </ul>
 
 
@@ -91,13 +94,12 @@ stylesheet: /css/main.css?v=1
   <li><a href="hw/hw05.pdf">Homework 5</a> (Due Oct 20)
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
   <li><a href="handout/t-percentile.pdf">T-Table: Percentiles of Student's t distribution</a>
-<!--
-  <li><a href="hw/hw05.pdf">Homework 5</a>
-    (<a href="hw/hw05sol.pdf">Solutions</a>)
+  <li><a href="hw/hw06.pdf">Homework 6</a> (Due Nov 3)
     <ul>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
     </ul>
+<!--
   <li><a href="hw/hw06.pdf">Homework 6</a>
     (<a href="hw/hw06sol.pdf">Solutions</a>)
     <ul>
