--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -42,11 +42,11 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/CEOPAY.CSV">CEOPAY.CSV</a>
       <li><a href="http://onlinestatbook.com/stat_sim/sampling_dist/">Central Limit Theorem Demo</a>
     </ul>
-<!--
   <li><a href="lecture/sample-dist.pdf">Oct 19 (1) - Sampling Distributions</a>
     (<a href="lecture/sample-dist-sol.pdf">Solutions</a>)
   <li><a href="lecture/confint-mean.pdf">Oct 19 (2) - Confidence Interval for Population Mean</a>
     (<a href="lecture/confint-mean-sol.pdf">Solutions</a>)
+<!--
   <li><a href="lecture/htest.pdf">Nov 2 (1) - Hypothesis Tests</a>
     (<a href="lecture/htest-sol.pdf">Solutions</a>)
     <ul>
@@ -131,14 +131,13 @@ stylesheet: /css/main.css?v=1
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
-  <!--
   <li><a href="handout/t-percentile.pdf">T-Table: Percentiles of Student's t distribution</a>
-  <li><a href="hw/hw05.pdf">Homework 5</a>
-    (<a href="hw/hw05sol.pdf">Solutions</a>)
+  <li><a href="hw/hw05.pdf">Homework 5</a> (Due Oct. 31)
     <ul>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
     </ul>
+  <!--
   <li><a href="hw/hw06.pdf">Homework 6</a>
     (<a href="hw/hw06sol.pdf">Solutions</a>)
     <ul>
