add langone lecture video

--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -110,6 +110,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/2deca97318124a45b408d4ef897b62641d">Sep 26</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/99a950d70e2f48a5a1e834865f6bc8841d">Oct 10</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f1420e348b764c6bbe3195e8c44c290c1d">Oct 17</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/89dcdf8a3e8e41e7b6270dedbe46011c1d">Oct 24</a>
 </ul>
 
 
