--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -132,6 +132,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
+    (<a href="handout/midterm-sol.pdf">Solutions</a>)
   <li><a href="handout/t-percentile.pdf">T-Table: Percentiles of Student's t distribution</a>
   <li><a href="hw/hw05.pdf">Homework 5</a> (Due Oct. 31)
     <ul>
