--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -93,6 +93,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
   <li><a href="hw/hw05.pdf">Homework 5</a> (Due Oct 20)
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
+    (<a href="handout/midterm-sol.pdf">Solutions</a>)
   <li><a href="handout/t-percentile.pdf">T-Table: Percentiles of Student's t distribution</a>
   <li><a href="hw/hw06.pdf">Homework 6</a> (Due Nov 3)
     <ul>
