--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -71,6 +71,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/5544147b138a4ba9abd61c3eca541a451d">Oct 13</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/83d89acd80cf4c6daa09392a2c31ff261d">Oct 18</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/ff24dccfa46d4a2d94dfa2f648ecd5641d">Oct 20</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/4f33e8907aa14776a42422186f5d2b641d">Oct 25</a>
 </ul>
 
 
