--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -111,6 +111,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/99a950d70e2f48a5a1e834865f6bc8841d">Oct 10</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f1420e348b764c6bbe3195e8c44c290c1d">Oct 17</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/89dcdf8a3e8e41e7b6270dedbe46011c1d">Oct 24</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/1d47858b26f4460f9016521f21c6f7371d">Oct 25 (Review Session)</a>
 </ul>
 
 
