add core materials

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -53,6 +53,8 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/confint-mean-sol.pdf">Solutions</a>)
   <li><a href="lecture/confint-prop.pdf">Oct 20 - Confidence Interval for Population Proportion</a>
     (<a href="lecture/confint-prop-sol.pdf">Solutions</a>)
+  <li><a href="lecture/htest.pdf">Nov 1 - Hypothesis Tests</a>
+    (<a href="lecture/htest-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -72,6 +74,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/83d89acd80cf4c6daa09392a2c31ff261d">Oct 18</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/ff24dccfa46d4a2d94dfa2f648ecd5641d">Oct 20</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/4f33e8907aa14776a42422186f5d2b641d">Oct 25</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f15733d41fa64811b123308998f0b1101d">Nov 1</a>
 </ul>
 
 
