--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -67,6 +67,8 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="http://www.drianwalker.com/overtaking/">Ian Walker's Bike Helmet Study</a>
     </ul>
+  <li><a href="lecture/compare2.pdf">Nov 10 - Comparison 2</a>
+    (<a href="lecture/compare2-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -89,6 +91,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f15733d41fa64811b123308998f0b1101d">Nov 1</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/3a4b192e412c4a738e1aa40c6b0fdf6c1d">Nov 3</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/d83f6dc853a84ee4a015fe15b61179fe1d">Nov 8</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a86309a6b95a45cc8c64f97c99625b741d">Nov 10</a>
 </ul>
 
 
@@ -124,13 +127,13 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
     </ul>
-<!--
-  <li><a href="hw/hw07.pdf">Homework 7</a>
-    (<a href="hw/hw07sol.pdf">Solutions</a>)
+  <li><a href="hw/hw08.pdf">Homework 8</a>
+    (Due Nov 17)
     <ul>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/retail_sales.csv">retail_sales.csv</a>
     </ul>
+<!--
   <li><a href="hw/hw08.pdf">Homework 8</a>
     (<a href="hw/hw08sol.pdf">Solutions</a>)
     <ul>
