add langone lecture link

--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -113,6 +113,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/89dcdf8a3e8e41e7b6270dedbe46011c1d">Oct 24</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/1d47858b26f4460f9016521f21c6f7371d">Oct 25 (Review Session)</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/2408df9fb5d24d928ad7848bb31ab2ea1d">Nov 7</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/33337f6227fe468aa06a2dbef18632a51d">Nov 14</a>
 </ul>
 
 
