update core materials

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -69,6 +69,11 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="lecture/compare2.pdf">Nov 10 - Comparison 2</a>
     (<a href="lecture/compare2-sol.pdf">Solutions</a>)
+  <li><a href="lecture/reg-intro.pdf">Nov 15 - Introduction to Linear Regression</a>
+    (<a href="lecture/reg-intro-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/mealsData.csv">mealsData.csv</a>
+    </ul>
 </ul>
 
 
@@ -92,6 +97,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/3a4b192e412c4a738e1aa40c6b0fdf6c1d">Nov 3</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/d83f6dc853a84ee4a015fe15b61179fe1d">Nov 8</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a86309a6b95a45cc8c64f97c99625b741d">Nov 10</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/95876cf836864a09b5135c551653947b1d">Nov 15</a>
 </ul>
 
 
