--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -74,6 +74,13 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
+  <li><a href="lecture/reg-inference.pdf">Nov 17 - Regression Inference and Forecasting</a>
+    (<a href="lecture/reg-inference-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/Village.CSV">Village.CSV</a>
+      <li><a href="data/studyhrs-salary.CSV">studyhrs-salary.CSV</a>
+      <li><a href="data/mealsData.csv">mealsData.csv</a>
+    </ul>
 </ul>
 
 
@@ -139,14 +146,14 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/retail_sales.csv">retail_sales.csv</a>
     </ul>
-<!--
-  <li><a href="hw/hw08.pdf">Homework 8</a>
-    (<a href="hw/hw08sol.pdf">Solutions</a>)
+  <li><a href="hw/hw09.pdf">Homework 9</a>
+    (Due Dec 1)
     <ul>
       <li><a href="data/DiamondPrices.CSV">DiamondPrices.CSV</a>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
       <li><a href="data/PriceToEarnings.CSV">PriceToEarnings.CSV</a>
     </ul>
+<!--
   <li><a href="handout/f-percentile.pdf">F-Table: Percentiles of F distribution</a>
   <li><a href="hw/hw09.pdf">Homework 9</a>
     (<a href="hw/hw09sol.pdf">Solutions</a>)
