--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -105,6 +105,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/d83f6dc853a84ee4a015fe15b61179fe1d">Nov 8</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a86309a6b95a45cc8c64f97c99625b741d">Nov 10</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/95876cf836864a09b5135c551653947b1d">Nov 15</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f0b106ede12f499bbd3e712fc1d7f7d91d">Nov 17</a>
 </ul>
 
 
