--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -78,7 +78,7 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/reg-inference-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/Village.CSV">Village.CSV</a>
-      <li><a href="data/studyhrs-salary.CSV">studyhrs-salary.CSV</a>
+      <li><a href="data/studyhrs-salary.csv">studyhrs-salary.csv</a>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
 </ul>
