update langone materials

--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -65,18 +65,18 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="lecture/compare2.pdf">Nov 14 (2) - Comparison 2</a>
     (<a href="lecture/compare2-sol.pdf">Solutions</a>)
-<!--
-  <li><a href="lecture/reg-intro.pdf">Nov 16 (1) - Introduction to Linear Regression</a>
+  <li><a href="lecture/reg-intro.pdf">Nov 21 (1) - Introduction to Linear Regression</a>
     (<a href="lecture/reg-intro-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
-  <li><a href="lecture/reg-inference.pdf">Nov 16 (2) - Regression Inference and Forecasting</a>
+  <li><a href="lecture/reg-inference.pdf">Nov 21 (2) - Regression Inference and Forecasting</a>
     (<a href="lecture/reg-inference-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/Village.CSV">Village.CSV</a>
-      <li><a href="data/dinners-commute.csv">dinners-commute.csv</a>
+      <li><a href="data/interest-dinners.csv">dinners-commute.csv</a>
     </ul>
+<!--
   <li><a href="lecture/reg-diagnostics.pdf">Nov 23 (1) - Regression Diagnostics</a>
     (<a href="lecture/reg-diagnostics-sol.pdf">Solutions</a>)
     <ul>
@@ -152,13 +152,12 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/retail_sales.csv">retail_sales.csv</a>
     </ul>
-  <!--
-  <li><a href="hw/hw08.pdf">Homework 8</a>
-    (<a href="hw/hw08sol.pdf">Solutions</a>)
+  <li><a href="hw/hw08.pdf">Homework 8</a> (Due Nov. 28)
     <ul>
       <li><a href="data/DiamondPrices.CSV">DiamondPrices.CSV</a>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
     </ul>
+  <!--
   <li><a href="handout/f-percentile.pdf">F-Table: Percentiles of F distribution</a>
   <li><a href="hw/hw09.pdf">Homework 9</a>
     (<a href="hw/hw09sol.pdf">Solutions</a>)
