add lecture video

--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -114,6 +114,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/1d47858b26f4460f9016521f21c6f7371d">Oct 25 (Review Session)</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/2408df9fb5d24d928ad7848bb31ab2ea1d">Nov 7</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/33337f6227fe468aa06a2dbef18632a51d">Nov 14</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/076de81a1fac45ebaab07cfec6cdccc11d">Nov 21</a>
 </ul>
 
 
