--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -74,7 +74,7 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/reg-inference-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/Village.CSV">Village.CSV</a>
-      <li><a href="data/interest-dinners.csv">dinners-commute.csv</a>
+      <li><a href="data/interest-dinners.csv">interest-dinners.csv</a>
     </ul>
 <!--
   <li><a href="lecture/reg-diagnostics.pdf">Nov 23 (1) - Regression Diagnostics</a>
