--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -81,6 +81,8 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/studyhrs-salary.csv">studyhrs-salary.csv</a>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
+  <li><a href="lecture/reg-diagnostics.pdf">Nov 22 - Regression Diagnostics</a>
+    (<a href="lecture/reg-diagnostics-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -106,6 +108,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a86309a6b95a45cc8c64f97c99625b741d">Nov 10</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/95876cf836864a09b5135c551653947b1d">Nov 15</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f0b106ede12f499bbd3e712fc1d7f7d91d">Nov 17</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/0430bd63c5454d91a48c924e6634eca81d">Nov 22</a>
 </ul>
 
 
