--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -76,19 +76,19 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/Village.CSV">Village.CSV</a>
       <li><a href="data/interest-dinners.csv">interest-dinners.csv</a>
     </ul>
-<!--
-  <li><a href="lecture/reg-diagnostics.pdf">Nov 23 (1) - Regression Diagnostics</a>
+  <li><a href="lecture/reg-diagnostics.pdf">Nov 28 (1) - Regression Diagnostics</a>
     (<a href="lecture/reg-diagnostics-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/Village.CSV">Village.CSV</a>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
-  <li><a href="lecture/reg-multiple.pdf">Nov 23 (2) - Multiple Regression, F Tests</a>
+  <li><a href="lecture/reg-multiple.pdf">Nov 28 (2) - Multiple Regression, F Tests</a>
     (<a href="lecture/reg-multiple-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
       <li><a href="data/EASTON.CSV">EASTON.CSV</a>
     </ul>
+<!--
   <li><a href="lecture/reg-multiple2.pdf">Nov 30 (1) - Multiple Regression 2</a>
     (<a href="lecture/reg-multiple2-sol.pdf">Solutions</a>)
     <ul>
@@ -158,13 +158,12 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/DiamondPrices.CSV">DiamondPrices.CSV</a>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
     </ul>
-  <!--
   <li><a href="handout/f-percentile.pdf">F-Table: Percentiles of F distribution</a>
-  <li><a href="hw/hw09.pdf">Homework 9</a>
-    (<a href="hw/hw09sol.pdf">Solutions</a>)
+  <li><a href="hw/hw09.pdf">Homework 9</a> (Due Dec. 5)
     <ul>
       <li><a href="data/MAGAZINE.CSV">MAGAZINE.CSV</a>
     </ul>
+  <!--
   <li><a href="handout/final.pdf">Sample Final</a>
 -->
 </ul>
