--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -115,6 +115,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/2408df9fb5d24d928ad7848bb31ab2ea1d">Nov 7</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/33337f6227fe468aa06a2dbef18632a51d">Nov 14</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/076de81a1fac45ebaab07cfec6cdccc11d">Nov 21</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/7cfe1875d4694e0f9a109bf21bac65e11d">Nov 28</a>
 </ul>
 
 
