--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -83,6 +83,13 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="lecture/reg-diagnostics.pdf">Nov 22 - Regression Diagnostics</a>
     (<a href="lecture/reg-diagnostics-sol.pdf">Solutions</a>)
+  <li><a href="lecture/reg-multiple.pdf">Nov 29 - Multiple Regression, F Tests</a>
+    (<a href="lecture/reg-multiple-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/mealsData.csv">mealsData.csv</a>
+      <li><a href="data/EASTON.CSV">EASTON.CSV</a>
+    </ul>
+  </li>
 </ul>
 
 
@@ -157,8 +164,8 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
       <li><a href="data/PriceToEarnings.CSV">PriceToEarnings.CSV</a>
     </ul>
-<!--
   <li><a href="handout/f-percentile.pdf">F-Table: Percentiles of F distribution</a>
+<!--
   <li><a href="hw/hw09.pdf">Homework 9</a>
     (<a href="hw/hw09sol.pdf">Solutions</a>)
     <ul>
