--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -164,9 +164,8 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="data/MAGAZINE.CSV">MAGAZINE.CSV</a>
     </ul>
-  <!--
   <li><a href="handout/final.pdf">Sample Final</a>
--->
+      (<a href="handout/final-sol.pdf">Solutions</a>)
 </ul>
 </div>
 </main>
