add core materials

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -90,6 +90,11 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/EASTON.CSV">EASTON.CSV</a>
     </ul>
   </li>
+  <li><a href="lecture/reg-multiple2.pdf">Dec 1 - Multiple Regression 2</a>
+    (<a href="lecture/reg-multiple2-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/movies2013.csv">movies2013.csv</a>
+    </ul>
 </ul>
 
 
@@ -116,6 +121,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/95876cf836864a09b5135c551653947b1d">Nov 15</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f0b106ede12f499bbd3e712fc1d7f7d91d">Nov 17</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/0430bd63c5454d91a48c924e6634eca81d">Nov 22</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f02202c4cd2a4ea6b1da0ba0f9a277121d">Nov 29</a>
 </ul>
 
 
@@ -165,15 +171,14 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/PriceToEarnings.CSV">PriceToEarnings.CSV</a>
     </ul>
   <li><a href="handout/f-percentile.pdf">F-Table: Percentiles of F distribution</a>
-<!--
-  <li><a href="hw/hw09.pdf">Homework 9</a>
-    (<a href="hw/hw09sol.pdf">Solutions</a>)
+  <li><a href="hw/hw10.pdf">Homework 10</a>
+    (Due Dec 8)
     <ul>
       <li><a href="data/MAGAZINE.CSV">MAGAZINE.CSV</a>
       <li><a href="data/DiamondPrices.CSV">DiamondPrices.CSV</a>
     </ul>
   <li><a href="handout/final.pdf">Sample Final</a>
--->
+      (<a href="handout/final-sol.pdf">Solutions</a>)
 </ul>
 </div>
 </main>
