add lecture link

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -122,6 +122,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f0b106ede12f499bbd3e712fc1d7f7d91d">Nov 17</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/0430bd63c5454d91a48c924e6634eca81d">Nov 22</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f02202c4cd2a4ea6b1da0ba0f9a277121d">Nov 29</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/5ec9c5d046be450cb9623ef0b398e2291d">Dec 1</a>
 </ul>
 
 
