add core materials

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -95,6 +95,12 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="data/movies2013.csv">movies2013.csv</a>
     </ul>
+  <li><a href="lecture/assoc.pdf">Dec 6 - Association and Causation</a>
+    (<a href="lecture/assoc-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="https://xkcd.com/552/">Correlation vs. Causation</a>
+      <li><a href="http://tylervigen.com/spurious-correlations">Spurious Correlations</a>
+    </ul>
 </ul>
 
 
@@ -123,6 +129,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/0430bd63c5454d91a48c924e6634eca81d">Nov 22</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f02202c4cd2a4ea6b1da0ba0f9a277121d">Nov 29</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/5ec9c5d046be450cb9623ef0b398e2291d">Dec 1</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/04c0d4d4318d40118986a1755b4e2ef81d">Dec 6</a>
 </ul>
 
 
