add lecture link

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -130,6 +130,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f02202c4cd2a4ea6b1da0ba0f9a277121d">Nov 29</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/5ec9c5d046be450cb9623ef0b398e2291d">Dec 1</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/04c0d4d4318d40118986a1755b4e2ef81d">Dec 6</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/ef56409d4e304a5490d229e260cc13e41d">Dec 8</a>
 </ul>
 
 
