--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -8,6 +8,13 @@ stylesheet: /css/main.css?v=1
 
 <h1>Statistics and Data&nbsp;Analysis</h1>
 
+<h2>Final Exam</h2>
+
+<pre>
+Friday, December 16
+9:00AM&ndash;11:00AM
+KMC 5-140
+</pre>
 
 <h2>Course Staff</h2>
 <dl>
