--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -160,7 +160,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
     </ul>
   <li><a href="handout/f-percentile.pdf">F-Table: Percentiles of F distribution</a>
-  <li><a href="hw/hw09.pdf">Homework 9</a> (Due Dec. 5)
+  <li><a href="hw/hw09.pdf">Homework 9</a> (Due Dec. 5; <a href="hw/hw09sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/MAGAZINE.CSV">MAGAZINE.CSV</a>
     </ul>
