update forecasting course

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -4,6 +4,8 @@ title: Forecasting Time Series Data
 stylesheet: /css/main.css?v=1
 ---
 <main class="wrapper">
+<div style="max-width: 600px; margin: 0 auto">
+
 <h1>Forecasting Time Series Data</h1>
 
 <img src="fig/dow.png" width="700" height="350"
@@ -15,15 +17,16 @@ stylesheet: /css/main.css?v=1
 <dl>
   <dt>Instructor</dt>
   <dd>Prof. Perry (pperry@stern.nyu.edu)</dd>
-  <dd>Office Hours: Thursday, 1:30PM-3:00PM, KMC 8-63 (or by appointment)</dd>
+  <dd>Office Hours: Thursday, 1:30 PM&ndash;3:00 PM, KMC 8-63 (or by appointment)</dd>
 </dl>
 <dl>
   <dt>Teaching Fellow</dt>
-  <dd>Bryan Ball (bbb288@nyu.edu)</dd>
-  <dd>Office Hours: Monday, 6:00PM-7:30PM, KMC 8th Floor (near mailboxes)</dd>
+  <dd>Sen Tian (stian@stern.nyu.edu)</dd>
+  <dd>Office Hours: Monday and Tuesday, KMC 3-60, 4:30 PM&ndash;5:30 PM</dd>
 </dl>
 
 
+<!--
 <h2>Lecture Slides</h2>
 <ul>
   <li><a href="lecture/intro.html">Introduction</a>
@@ -70,9 +73,11 @@ stylesheet: /css/main.css?v=1
       (<a href="lecture/inflation.Rmd">Rmd</a>)
   <li><a href="lecture/cointegration.html">Unit Root Tests & Cointegration</a>
       (<a href="lecture/cointegration.Rmd">Rmd</a>)
+-->
 </ul>
 
 
+<!--
 <h2>Lecture Videos</h2>
 <ul>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f38d9fd3b1504a8cb225c8a9a6dd1dd61d">Feb 10</a>
@@ -91,6 +96,7 @@ stylesheet: /css/main.css?v=1
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
 </p>
+-->
 
 
 <h2>Handouts and Links</h2>
@@ -98,7 +104,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="handout/syllabus.pdf">Syllabus</a>
   <li><a href="http://cran.r-project.org/bin/macosx/">Install R (Mac)</a>
   <li><a href="http://cran.r-project.org/bin/windows/base/">Install R (Windows)</a>
-  <li><a href="http://www.rstudio.com/products/rstudio/download/">Install RStudio</a>
+  <li><a href="http://www.rstudio.com/products/rstudio/download/">Install RStudio Desktop</a>
   <li><a href="http://people.stern.nyu.edu/churvich/Forecasting/handouts.htm">Cliff Hurvich's Forecasting Notes</a>
   <li><a href="handout/r-intro.html">Introduction to R</a>
     (<a href="handout/r-intro.pdf">pdf</a>;
@@ -106,6 +112,7 @@ stylesheet: /css/main.css?v=1
 </ul>
 
 
+<!--
 <h2>Assignments</h2>
 <ul>
   <li><a href="hw/hw01.pdf">Homework 1</a>
@@ -155,5 +162,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/gilt.csv">gilt.csv</a>
     </ul>
 </ul>
+-->
 
+</div>
 </main>
