update intro slides; add simplified intro

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -26,11 +26,12 @@ stylesheet: /css/main.css?v=1
 </dl>
 
 
-<!--
 <h2>Lecture Slides</h2>
 <ul>
   <li><a href="lecture/intro.html">Introduction</a>
-      (<a href="lecture/intro.Rmd">Rmd</a>)
+      (<a href="lecture/intro.Rmd">Rmd</a>;
+      <a href="lecture/intro_simple.Rmd">Simplified Rmd</a>)
+<!--
   <li><a href="lecture/stationary.html">Simple Stationary Processes</a>
       (<a href="lecture/stationary.Rmd">Rmd</a>)
   <li><a href="lecture/autocor.html">Autocorrelation</a>
