add lecture link

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -81,6 +81,7 @@ stylesheet: /css/main.css?v=1
 <h2>Lecture Videos</h2>
 <ul>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/46a0263cef99423a8fd1a47090c9dc3c1d">Feb 7</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e7e00398859149dda8432205f355b6bb1d">Feb 14</a>
 </ul>
 
 
