--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -33,9 +33,9 @@ stylesheet: /css/main.css?v=1
       <a href="lecture/intro_simple.Rmd">Simplified Rmd</a>)
   <li><a href="lecture/stationary.html">Simple Stationary Processes</a>
       (<a href="lecture/stationary.Rmd">Rmd</a>)
-<!--
   <li><a href="lecture/autocor.html">Autocorrelation</a>
       (<a href="lecture/autocor.Rmd">Rmd</a>)
+<!--
   <li><a href="lecture/arstationary.html">Stationary and Nonstationary AR Models</a>
       (<a href="lecture/arstationary.Rmd">Rmd</a>)
   <li><a href="lecture/identify.html">Model Identification with ACF, PACF</a>
@@ -100,21 +100,21 @@ stylesheet: /css/main.css?v=1
 
 <h2>Assignments</h2>
 <ul>
-  <li><a href="hw/hw01.pdf">Homework 1</a>
+  <li><a href="hw/hw01.pdf">Homework 1</a> (Due Feb. 14)
     <ul>
       <li><a href="hw/01/prob1.Rmd">prob1.Rmd</a>
       <li><a href="hw/01/prob2.Rmd">prob2.Rmd</a>
       <li><a href="data/dow.csv">dow.csv</a>
       <li><a href="data/euro.csv">euro.csv</a>
     </ul>
-  <li><a href="hw/hw02.pdf">Homework 2</a>
+  <li><a href="hw/hw02.pdf">Homework 2</a> (Due Feb. 21)
     <ul>
       <li><a href="hw/02/probs1to3.Rmd">probs1to3.Rmd</a>
       <li><a href="data/russell.csv">russell.csv</a>
     </ul>
   <li><a href="hw/warmup01.pdf">Warmup for HW2 and HW3</a> (do but don't turn in)
+  <li><a href="hw/hw03.pdf">Homework 3</a> (Due Feb. 28)
 <!--
-  <li><a href="hw/hw03.pdf">Homework 3</a>
   <li><a href="hw/hw04.pdf">Homework 4</a>
     <ul>
       <li><a href="hw/04/probs2to5.Rmd">probs2to5.Rmd</a>
