add lecture link

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -83,6 +83,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/46a0263cef99423a8fd1a47090c9dc3c1d">Feb 7</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e7e00398859149dda8432205f355b6bb1d">Feb 14</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/280c3bd7407a4006be73d5d8c3d5e3681d">Feb 21</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/4aea50b10efa4c5e86e99783f6c58a911d">Feb 28</a>
 </ul>
 
 
