--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -116,7 +116,7 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="hw/warmup01.pdf">Warmup for HW2 and HW3</a> (do but don't turn in)
   <li><a href="hw/hw03.pdf">Homework 3</a> (Due Feb. 28)
-  <li><a href="hw/hw04.pdf">Homework 4</a>
+  <li><a href="hw/hw04.pdf">Homework 4</a> (Updated March 3; Due Mar. 7)
     <ul>
       <li><a href="hw/04/probs2to5.Rmd">probs2to5.Rmd</a>
       <li><a href="data/cpi.csv">cpi.csv</a>
