update with lecture materials

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -39,11 +39,11 @@ stylesheet: /css/main.css?v=1
       (<a href="lecture/arstationary.Rmd">Rmd</a>)
   <li><a href="lecture/identify.html">Model Identification with ACF, PACF</a>
       (<a href="lecture/identify.Rmd">Rmd</a>)
-<!--
   <li><a href="lecture/google.html">Analysis of the Google Series</a>
       (<a href="lecture/google.Rmd">Rmd</a>)
   <li><a href="lecture/housingstarts.html">Analysis of the Housing Starts Series</a>
       (<a href="lecture/housingstarts.Rmd">Rmd</a>)
+<!--
   <li><a href="lecture/bootstrap.html">Bootstrap Forecast Intervals</a>
       (<a href="lecture/bootstrap.Rmd">Rmd</a>)
   <li><a href="lecture/seasonal.html">Seasonal Models</a>
@@ -116,19 +116,19 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="hw/warmup01.pdf">Warmup for HW2 and HW3</a> (do but don't turn in)
   <li><a href="hw/hw03.pdf">Homework 3</a> (Due Feb. 28)
-  <li><a href="hw/hw04.pdf">Homework 4</a> (Updated March 3; Due Mar. 7)
+  <li><a href="hw/hw04.pdf">Homework 4</a> (Updated Mar. 3; Due Mar. 7)
     <ul>
       <li><a href="hw/04/probs2to5.Rmd">probs2to5.Rmd</a>
       <li><a href="data/cpi.csv">cpi.csv</a>
       <li><a href="data/gdp.csv">gdp.csv</a>
       <li><a href="data/housingstarts.csv">housingstarts.csv</a>
     </ul>
-<!--
-  <li><a href="hw/hw05.pdf">Homework 5</a>
+  <li><a href="hw/hw05.pdf">Homework 5</a> (Due Mar. 21) 
     <ul>
       <li><a href="hw/05/hw05.Rmd">hw05.Rmd</a>
       <li><a href="data/unemployment.csv">unemployment.csv</a>
     </ul>
+<!--
   <li><a href="hw/proj01.pdf">Project 1</a>
   <li><a href="hw/hw06.pdf">Homework 6</a>
     <ul>
