add new lectures and video

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -43,13 +43,13 @@ stylesheet: /css/main.css?v=1
       (<a href="lecture/google.Rmd">Rmd</a>)
   <li><a href="lecture/housingstarts.html">Analysis of the Housing Starts Series</a>
       (<a href="lecture/housingstarts.Rmd">Rmd</a>)
-<!--
   <li><a href="lecture/bootstrap.html">Bootstrap Forecast Intervals</a>
       (<a href="lecture/bootstrap.Rmd">Rmd</a>)
   <li><a href="lecture/seasonal.html">Seasonal Models</a>
       (<a href="lecture/seasonal.Rmd">Rmd</a>)
   <li><a href="lecture/cokerev.html">Coca-Cola Revenue Analysis</a>
       (<a href="lecture/cokerev.Rmd">Rmd</a>)
+<!--
   <li><a href="lecture/chaos.html">Chaos</a>
       (<a href="lecture/chaos.Rmd">Rmd</a>)
   <li><a href="lecture/nasdaq.html">NASDAQ Analysis</a>
@@ -85,6 +85,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/280c3bd7407a4006be73d5d8c3d5e3681d">Feb 21</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/4aea50b10efa4c5e86e99783f6c58a911d">Feb 28</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/43034f77381e49578552ae64d05907101d">Mar 7</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/6e45e1366f0e4d07b1412deee9f880eb1d">Mar 21</a>
 </ul>
 
 
@@ -129,8 +130,8 @@ stylesheet: /css/main.css?v=1
       <li><a href="hw/05/hw05.Rmd">hw05.Rmd</a>
       <li><a href="data/unemployment.csv">unemployment.csv</a>
     </ul>
-<!--
   <li><a href="hw/proj01.pdf">Project 1</a>
+<!--
   <li><a href="hw/hw06.pdf">Homework 6</a>
     <ul>
       <li><a href="hw/06/hw06.Rmd">hw06.Rmd</a>
