add lecture link

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -86,6 +86,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/4aea50b10efa4c5e86e99783f6c58a911d">Feb 28</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/43034f77381e49578552ae64d05907101d">Mar 7</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/6e45e1366f0e4d07b1412deee9f880eb1d">Mar 21</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/891a9812843f4b6caa097729348808921d">Mar 28</a>
 </ul>
 
 
