--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -131,8 +131,8 @@ stylesheet: /css/main.css?v=1
       <li><a href="hw/05/hw05.Rmd">hw05.Rmd</a>
       <li><a href="data/unemployment.csv">unemployment.csv</a>
     </ul>
-  <li><a href="hw/proj01.pdf">Project 1</a>
-  <li><a href="hw/hw06.pdf">Homework 6</a>
+  <li><a href="hw/proj01.pdf">Project 1</a> (Due Apr. 4)
+  <li><a href="hw/hw06.pdf">Homework 6</a> (Due Apr. 11)
     <ul>
       <li><a href="hw/06/hw06.Rmd">hw06.Rmd</a>
       <li><a href="data/chaos1.csv">chaos1.csv</a>
