--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -87,6 +87,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/43034f77381e49578552ae64d05907101d">Mar 7</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/6e45e1366f0e4d07b1412deee9f880eb1d">Mar 21</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/891a9812843f4b6caa097729348808921d">Mar 28</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/3cf07910b11e48cd9985173ad683f6731d">Apr 4</a>
 </ul>
 
 
