--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -55,13 +55,13 @@ stylesheet: /css/main.css?v=1
       (<a href="lecture/nasdaq.Rmd">Rmd</a>)
   <li><a href="lecture/arch.html">ARCH Models</a>
       (<a href="lecture/arch.Rmd">Rmd</a>)
-<!--
-  <li><a href="lecture/gm.html">General Motors Volatility</a>
-      (<a href="lecture/gm.Rmd">Rmd</a>)
   <li><a href="lecture/archsim.html">Simulating ARCH Models</a>
       (<a href="lecture/archsim.Rmd">Rmd</a>)
+  <li><a href="lecture/gm.html">General Motors Volatility</a>
+      (<a href="lecture/gm.Rmd">Rmd</a>)
   <li><a href="lecture/archfit.html">Fitting and Diagnostic Checking for ARCH Models</a>
       (<a href="lecture/archfit.Rmd">Rmd</a>)
+<!--
   <li><a href="lecture/bearstearns.html">Bear Stearns Data Analysis</a>
       (<a href="lecture/bearstearns.Rmd">Rmd</a>)
   <li><a href="lecture/nasdaq-arch.html">NASDAQ ARCH Analysis</a>
@@ -139,8 +139,8 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/chaos1.csv">chaos1.csv</a>
       <li><a href="data/chaos2.csv">chaos2.csv</a>
     </ul>
+  <li><a href="hw/hw07.pdf">Homework 7</a> (Due Apr. 18)
 <!--
-  <li><a href="hw/hw07.pdf">Homework 7</a>
   <li><a href="hw/hw08.pdf">Homework 8</a>
     <ul>
       <li><a href="hw/08/hw08.Rmd">hw08.Rmd</a>
