--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -141,12 +141,12 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/chaos2.csv">chaos2.csv</a>
     </ul>
   <li><a href="hw/hw07.pdf">Homework 7</a> (Due Apr. 18)
-<!--
-  <li><a href="hw/hw08.pdf">Homework 8</a>
+  <li><a href="hw/hw08.pdf">Homework 8</a> (Due Apr. 25)
     <ul>
       <li><a href="hw/08/hw08.Rmd">hw08.Rmd</a>
       <li><a href="data/rupee.csv">rupee.csv</a>
     </ul>
+<!--
   <li><a href="hw/proj02.pdf">Project 2 (Due May 5)</a>
   <li><a href="hw/hw09.pdf">Homework 9</a>
     <ul>
