--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -89,6 +89,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/891a9812843f4b6caa097729348808921d">Mar 28</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/3cf07910b11e48cd9985173ad683f6731d">Apr 4</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e64c1a0f366f4066a18dae487d5dceca1d">Apr 11</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/edaad98dc38d43afae496f0c6ccc5eed1d">Apr 18</a>
 </ul>
 
 
