fix broken link

--- a/course/ssd/lecture/topic.html
+++ b/course/ssd/lecture/topic.html
@@ -168,7 +168,7 @@ hr {
 <p><em>Patrick O. Perry, NYU Stern School of Business</em></p>
 
 <p>Most of the code here is taken from Chapter 10.3 of Taylor Arnold and Lauren
-Tilton&#39;s book, <a href="http://http://humanitiesdata.org/">Humanities Data in R</a>.</p>
+Tilton&#39;s book, <a href="http://humanitiesdata.org/">Humanities Data in R</a>.</p>
 
 <h2>Preliminaries</h2>
 
