add lecture, dftable link

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -89,6 +89,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e64c1a0f366f4066a18dae487d5dceca1d">Apr 11</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/edaad98dc38d43afae496f0c6ccc5eed1d">Apr 18</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/974d2c1812304a6b90ff6e739caf65541d">Apr 25</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/0ef36dc3604a482fb0419f80bdd819751d">May 2</a>
 </ul>
 
 
@@ -147,6 +148,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/rupee.csv">rupee.csv</a>
     </ul>
   <li><a href="hw/proj02.pdf">Project 2 (Due May 2)</a>
+  <li><a href="hw/09/DFTable.pdf">Dickey-Fuller Table</a>
 <!--
   <li><a href="hw/hw09.pdf">Homework 9</a>
     <ul>
