remove old materials

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -8,6 +8,7 @@ stylesheet: /css/main.css?v=1
 
 <h1>Statistics and Data&nbsp;Analysis</h1>
 
+<!--
 <h2>Final Exam</h2>
 
 <pre>
@@ -15,21 +16,24 @@ Friday, December 16
 9:00AM&ndash;11:00AM
 KMC 5-140
 </pre>
+-->
 
 <h2>Course Staff</h2>
 <dl>
   <dt>Instructor</dt>
   <dd>Prof. Perry (pperry@stern.nyu.edu)</dd>
-  <dd>Office Hours: Wednesday 4:30PM&ndash;6:00PM, KMC 8-63)</dd>
+  <dd>Office Hours: Wednesday 4:30PM&ndash;6:00PM, KMC 8-63</dd>
 
   <dt>Teaching Fellow</dt>
-  <dd>Moideen Kalladi (moideen.kalladi@stern.nyu.edu)</dd>
-  <dd>Office Hours: Monday &amp; Thursday, 12:00PM&ndash;1:00PM, KMC 8-174</dd>
+  <dd>Marc Fanning (mf3520@stern.nyu.edu)</dd>
+  <dd>Office Hours: Tuesday, 12:00PM&ndash;1:00PM, KMC 8-174</dd>
+  <dd><span style="visibility:hidden">Office Hours: </span>Wednesday, 12:00PM&ndash;1:00PM, KMC 2-80</dd>
 </dl>
 
 
 <h2>Lecture Notes</h2>
 <ul>
+  <!--
   <li><a href="lecture/populations.pdf">Sep 6 - Populations and Samples</a>
     (<a href="lecture/populations-sol.pdf">Solutions</a>)
   <li><a href="lecture/descrip.pdf">Sep 8 - Descriptive Statistics</a>
@@ -108,11 +112,13 @@ KMC 5-140
       <li><a href="https://xkcd.com/552/">Correlation vs. Causation</a>
       <li><a href="http://tylervigen.com/spurious-correlations">Spurious Correlations</a>
     </ul>
+  -->
 </ul>
 
 
 <h2>Lecture Videos</h2>
 <ul>
+  <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/adec4e90415343f399e03940b41c4a991d">Sep 6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b9fdc985a2aa47c3957fae3fdca02d471d">Sep 8</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/da8b155ea1744890be5a78163771cefb1d">Sep 13</a>
@@ -138,11 +144,13 @@ KMC 5-140
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/5ec9c5d046be450cb9623ef0b398e2291d">Dec 1</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/04c0d4d4318d40118986a1755b4e2ef81d">Dec 6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/ef56409d4e304a5490d229e260cc13e41d">Dec 8</a>
+  -->
 </ul>
 
 
 <h2>Handouts and Assignments</h2>
 <ul>
+ <!-- 
   <li><a href="handout/syllabus.pdf">Syllabus</a>
   <li><a href="https://goo.gl/forms/ZRwpMmGr44IcoExW2">Class Survey</a>
   <li><a href="handout/minitab-tips.pdf">Minitab Tips</a>
@@ -194,6 +202,7 @@ KMC 5-140
     </ul>
   <li><a href="handout/final.pdf">Sample Final</a>
       (<a href="handout/final-sol.pdf">Solutions</a>)
+ -->
 </ul>
 </div>
 </main>
