--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -115,6 +115,7 @@ Monday, December 18
 
 <h2>Lecture Videos</h2>
 <ul>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/888c89ce44534663a1f27554bd92db8e1d">Sep 5</a>
   <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/adec4e90415343f399e03940b41c4a991d">Sep 6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b9fdc985a2aa47c3957fae3fdca02d471d">Sep 8</a>
