--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -34,9 +34,9 @@ Monday, December 18
     (<a href="lecture/populations-sol.pdf">Solutions</a>)
   <li><a href="lecture/descrip.pdf">Sep 7 - Descriptive Statistics</a>
     (<a href="lecture/descrip-sol.pdf">Solutions</a>)
-  <!--
-  <li><a href="lecture/prob.pdf">Sep 13 - Probability</a>
+  <li><a href="lecture/prob.pdf">Sep 12 - Probability</a>
     (<a href="lecture/prob-sol.pdf">Solutions</a>)
+  <!--
   <li><a href="lecture/cond-prob-1.pdf">Sep 15 - Conditional Probability 1</a>
     (<a href="lecture/cond-prob-1-sol.pdf">Solutions</a>)
   <li><a href="lecture/cond-prob-2.pdf">Sep 20 - Conditional Probability 2</a>
@@ -117,6 +117,7 @@ Monday, December 18
 <ul>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/888c89ce44534663a1f27554bd92db8e1d">Sep 5</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a8e28092adff4f6097ffa13f99075c091d">Sep 7</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/0d649ef03e2942a4863ecea0d6ca33fb1d">Sep 12</a>
   <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/adec4e90415343f399e03940b41c4a991d">Sep 6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b9fdc985a2aa47c3957fae3fdca02d471d">Sep 8</a>
