add lecture link

--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -109,6 +109,7 @@ stylesheet: /css/main.css?v=1
 
 <h2>Lecture Videos</h2>
 <ul>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f616d69f6bf64c4f9877937759e90f531d">Sep 25</a>
 <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/18aa77ec38ca433d967e6d827ef6e6f11d">Sep 19</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/2deca97318124a45b408d4ef897b62641d">Sep 26</a>
