--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -121,6 +121,7 @@ Monday, December 18
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/9ad669ffb3ea4e0aac6cee70900ae6051d">Sep 14</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/4f5dbc60d8a142eb90dd436c76cb351b1d">Sep 19</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/12882dc87e8b402385194d2c7e58e6b31d">Sep 26</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/fda680707bf54a86ba81f45976b1fccc1d">Sep 28</a>
   <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/adec4e90415343f399e03940b41c4a991d">Sep 6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b9fdc985a2aa47c3957fae3fdca02d471d">Sep 8</a>
