--- a/index.html
+++ b/index.html
@@ -11,30 +11,8 @@ title: Patrick O. Perry - Home
 
   <article>
     <p>
-      I'm
-      <span itemprop="name">Patrick Perry</span>, an
-      <span itemprop="title">Assistant Professor of Statistics</span>
-      in the
-      <a href="http://w4.stern.nyu.edu/ioms/">IOMS Department</a> at
-      <span itemprop="affiliation">NYU Stern</span>.  I completed my
-      undergraduate and graduate work at Stanford University, obtaining
-      a B.S. in Mathematics in 2003, an M.S. in Electrical Engineering
-      in 2004, and a Ph.D. in Statistics in 2009.  For my dissertation
-      I worked with
-      <a href="http://stat.stanford.edu/~owen"><span itemprop="contact">Art Owen</span></a>,
-      studying applications of cross-validation to unsupervised
-      learning.  Between 2009 and 2011 I worked with
-      <a href="http://www.ucl.ac.uk/statistics/people/patrickwolfe"><span itemprop="contact">Patrick Wolfe</span></a>
-      as a postdoctoral researcher at Harvard University.
-    </p>
-
-    <p>
-      My research is primarily in modern multivariate statistics.
-      Specifically, it focuses on inference for network data and other
-      emerging data sources, high-dimensional data analysis, and
-      random matrix theory.  I'm also interested in data visualization
-      and statistical computing.
-    </p>
+    <p><span itemprop="name">Patrick O. Perry</span> is a statistician developing tools and methodology for nontraditional data, especially text and networks. He has worked on text summarization and scaling methods, dynamic network analysis, clustering methods for networks and other data, fitting methods for large-scale hierarchical models, and latent factor methods for high-dimensional data. His work has appeared in <cite>The Journal of the Royal Statistical Society</cite>, <cite>The Annals of Applied Statistics</cite>, and <cite>The Journal of Machine Learning Research</cite>, among
+other venues.  Patrick has developed and released open source implementations of his methods for the R software environment, and he has written a variety of other software packages for data analysis in the C and Haskell programming languages. Currently, Patrick is an <span itemprop="title">Assistant Professor of Information, Operations, and Management Sciences</span> at the <span itemprop="affiliation">New York University Stern School of Business</span>. He teaches courses in introductory statistics, forecasting time series data, and statistics for social data. Patrick received a BS in mathematics, an MS in electrical engineering and a PhD in statistics from Stanford University, and he completed a postdoctoral fellowship at Harvard University.</p>
   </article>
 
   <div class="contact">
