add link to corpus

--- a/code/index.html
+++ b/code/index.html
@@ -15,6 +15,13 @@ title: Patrick O. Perry - Code
     </dd>
 
     <dt>
+      <a href="http://corpustext.com/">corpus</a>
+    </dt>
+    <dd>
+      Text corpus analysis, with full support for international text (Unicode).
+    </dd>
+
+    <dt>
       <a href="http://cran.r-project.org/web/packages/mbest/">mbest</a>
     </dt>
     <dd>
