revise code descriptions

--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@ title: Patrick O. Perry - Code
       <a href="http://cran.r-project.org/web/packages/bcv/">bcv</a>
     </dt>
     <dd>
-      Bi-cross-validation.  This package implements cross-validation-based methods for choosing the rank of an SVD approximation.
+      Bi-cross-validation, for choosing the rank of a low-rank matrix approximation.
     </dd>
 
     <dt>
@@ -32,11 +32,7 @@ title: Patrick O. Perry - Code
       <a href="http://cran.r-project.org/web/packages/RMTstat/">RMTstat</a>
     </dt>
     <dd>
-      Distributions and statistics from random matrix theory
-      (RMT), mostly related to large sample covariance matrices.  Joint work
-      with Iain Johnstone, Zongming Ma, and Morteza Shahram. (This software
-      will only work in R; For MATLAB, use the
-      <a href="https://www-m5.ma.tum.de/KPZ">Pr&auml;hofer-Spohn KPZ Tables</a>.)
+      Distributions and statistics from random matrix theory (RMT).  Joint work with Iain Johnstone, Zongming Ma, and Morteza Shahram.
     </dd>
 
   </dl>
@@ -49,14 +45,14 @@ title: Patrick O. Perry - Code
       <a href="http://hackage.haskell.org/package/blas/">hs-blas</a>
     </dt>
     <dd>
-      A high-level interface on the BLAS linear algebra library for the Haskell programming language.
+      A high-level interface to the BLAS linear algebra library.
     </dd>
 
     <dt>
       <a href="http://hackage.haskell.org/package/monte-carlo/">hs-monte-carlo</a>
     </dt>
     <dd>
-      A Haskell library for performing Monte-Carlo simulations.
+      A pure functional library for Monte-Carlo simulations.
     </dd>
 
 
@@ -67,9 +63,7 @@ title: Patrick O. Perry - Code
       <a href="http://mii.stanford.edu/research/comptop/programs/">Plex</a>
     </dt>
     <dd>
-      A collection of routines developed as a research tool to building and
-      study simplicial complexes generated from point-cloud data.  Joint work
-      with Gunnar Carlsson and Vin de Silva.
+      Computational topology for point cloud data.  Joint work with Gunnar Carlsson and Vin de Silva.
     </dd>
   </dl>
 
