--- a/index.html
+++ b/index.html
@@ -10,18 +10,9 @@ title: Patrick O. Perry - Home
        alt="[Patrick O. Perry, circa 2012]">
 
   <article>
-    <p><span itemprop="name">Patrick O. Perry</span> is a statistician
-    developing tools and methodology for nontraditional data, especially text
-    and networks. He has worked on text summarization and scaling methods,
-    dynamic network analysis, clustering methods for networks and other data,
-    fitting methods for large-scale hierarchical models, and latent factor
-    methods for high-dimensional data.</p>
-    <p>
-    Perry's work has appeared in <cite>The Journal of the Royal Statistical Society</cite>, <cite>The Annals of Applied Statistics</cite>, and <cite>The Journal of Machine Learning Research</cite>, among
-other venues.  He has developed and released open source implementations of his methods for the R software environment and has written a variety of other software packages for data analysis in the C and Haskell programming languages.
-    </p>
-    <p>
-Currently, Prof. Perry is an <span itemprop="title">Assistant Professor of Information, Operations, and Management Sciences</span> at the <span itemprop="affiliation">New York University Stern School of Business</span>. He teaches courses in introductory statistics, forecasting time series data, and statistics for social data. Perry received a BS in mathematics, an MS in electrical engineering and a PhD in statistics from Stanford University, and he completed a postdoctoral fellowship at Harvard University.</p>
+    <p><span itemprop="name">Patrick O. Perry</span> is a statistician developing tools and methodology for nontraditional data, especially text and networks. He has worked on text summarization and scaling methods, dynamic network analysis, clustering methods for networks and other data, fitting methods for large-scale hierarchical models, and latent factor methods for high-dimensional data.</p>
+    <p>Perry's work has appeared in <cite>The Journal of the Royal Statistical Society</cite>, <cite>The Annals of Applied Statistics</cite>, and <cite>The Journal of Machine Learning Research</cite>, among other venues.  He has developed and released open source implementations of his methods for the R software environment and has written a variety of other software packages for data analysis in the C and Haskell programming languages.</p>
+    <p>Currently, Perry is an <span itemprop="title">Assistant Professor of Information, Operations, and Management Sciences</span> at the <span itemprop="affiliation">New York University Stern School of Business</span>. He teaches courses in introductory statistics, forecasting time series data, and statistics for social data. Perry received a BS in mathematics, an MS in electrical engineering and a PhD in statistics from Stanford University, and he completed a postdoctoral fellowship at Harvard University.</p>
   </article>
 
   <div class="contact">
