--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -30,11 +30,11 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/prob-sol.pdf">Solutions</a>)
   <li><a href="lecture/cond-prob.pdf">Oct 2 (2) - Conditional Probability</a>
     (<a href="lecture/cond-prob-sol.pdf">Solutions</a>)
-<!--
-  <li><a href="lecture/randvar.pdf">Oct 10 (1) - Random Variables</a>
+  <li><a href="lecture/randvar.pdf">Oct 16 (1) - Random Variables</a>
     (<a href="lecture/randvar-sol.pdf">Solutions</a>)
-  <li><a href="lecture/counts.pdf">Oct 10 (2) - Models for Counts</a>
+  <li><a href="lecture/counts.pdf">Oct 16 (2) - Models for Counts</a>
     (<a href="lecture/counts-sol.pdf">Solutions</a>)
+<!--
   <li><a href="lecture/normal.pdf">Oct 17 (1) - The Normal Model</a>
     (<a href="lecture/normal-sol.pdf">Solutions</a>)
   <li><a href="lecture/clt.pdf">Oct 17 (2) - The Central Limit Theorem</a>
@@ -108,6 +108,7 @@ stylesheet: /css/main.css?v=1
 <ul>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f616d69f6bf64c4f9877937759e90f531d">Sep 25</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/1b1b02aba57f43338080a53121bc2a9e1d">Oct 2</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/9cc8fcd3cef24877892c12b7cd2288e11d">Oct 16</a>
 <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/18aa77ec38ca433d967e6d827ef6e6f11d">Sep 19</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/2deca97318124a45b408d4ef897b62641d">Sep 26</a>
@@ -138,8 +139,8 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/USDomesticBeer.CSV">USDomesticBeer.CSV</a>
     </ul>
   <li><a href="hw/hw02.pdf">Homework 2</a> (Due Oct. 16)
+  <li><a href="hw/hw03.pdf">Homework 3</a> (Due Oct. 23)
 <!--
-  <li><a href="hw/hw03.pdf">Homework 3</a> (Due Oct. 17)
   <li><a href="hw/hw04.pdf">Homework 4</a> (Due Oct. 24)
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
