--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -34,15 +34,15 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/randvar-sol.pdf">Solutions</a>)
   <li><a href="lecture/counts.pdf">Oct 16 (2) - Models for Counts</a>
     (<a href="lecture/counts-sol.pdf">Solutions</a>)
-<!--
-  <li><a href="lecture/normal.pdf">Oct 17 (1) - The Normal Model</a>
+  <li><a href="lecture/normal.pdf">Oct 23 (1) - The Normal Model</a>
     (<a href="lecture/normal-sol.pdf">Solutions</a>)
-  <li><a href="lecture/clt.pdf">Oct 17 (2) - The Central Limit Theorem</a>
+  <li><a href="lecture/clt.pdf">Oct 23 (2) - The Central Limit Theorem</a>
     (<a href="lecture/clt-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/CEOPAY.CSV">CEOPAY.CSV</a>
       <li><a href="http://onlinestatbook.com/stat_sim/sampling_dist/">Central Limit Theorem Demo</a>
     </ul>
+<!--
   <li><a href="lecture/sample-dist.pdf">Oct 19 (1) - Sampling Distributions</a>
     (<a href="lecture/sample-dist-sol.pdf">Solutions</a>)
   <li><a href="lecture/confint-mean.pdf">Oct 19 (2) - Confidence Interval for Population Mean</a>
@@ -109,6 +109,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f616d69f6bf64c4f9877937759e90f531d">Sep 25</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/1b1b02aba57f43338080a53121bc2a9e1d">Oct 2</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/9cc8fcd3cef24877892c12b7cd2288e11d">Oct 16</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/85db5c11eec04a149026dd897bd777001d">Oct 23</a>
 <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/18aa77ec38ca433d967e6d827ef6e6f11d">Sep 19</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/2deca97318124a45b408d4ef897b62641d">Sep 26</a>
@@ -140,12 +141,12 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="hw/hw02.pdf">Homework 2</a> (Due Oct. 16)
   <li><a href="hw/hw03.pdf">Homework 3</a> (Due Oct. 23)
-<!--
-  <li><a href="hw/hw04.pdf">Homework 4</a> (Due Oct. 24)
+  <li><a href="hw/hw04.pdf">Homework 4</a> (Due Oct. 30)
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
     (<a href="handout/midterm-sol.pdf">Solutions</a>)
+<!--
   <li><a href="handout/t-percentile.pdf">T-Table: Percentiles of Student's t distribution</a>
   <li><a href="hw/hw05.pdf">Homework 5</a> (Due Oct. 31)
     <ul>
